--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h3>I am a 23 years old boy. Just graduated from my <a href='http://www.ntu.edu.tw/'>college.</a> During the last year in college, I worked in a <a href='http://www.myfund888.com/'>Assetmanagement</a> as a research assistance for one year. <br> Althought the job is very challenging and matches my interest, I still think I need to improve myself. So, I choose to learn some cool stuffs through coding. </br> Wish I could combine <span style='font-family: cursive;'>coding<span> with the financial market!</h3>
+							<h3>I am a 23 years old boy. Just graduated from my <a href='http://www.ntu.edu.tw/'>college.</a> During the last year in college, I worked in a <a href='http://www.myfund888.com/'>Assetmanagement company</a> as a research assistance for one year. <br> Althought the job is very challenging and matches my interest, I still think I need to improve myself. So, I choose to learn some cool stuffs through coding. </br> Wish I could combine <span style='font-family: cursive;'>coding<span> with the financial market!</h3>
 						</header>
 						<p>I will learn making some cool projects with Nodejs, CSS/HTML...etc.</p>
 						<ul class="actions">
