--- a/index.html
+++ b/index.html
@@ -444,6 +444,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<li><a href="https://github.com/weijchen" class="icon fa-github"><span class="label">Github</span></a></li>
 					<li><a href="https://www.facebook.com/weijchen2013" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 					<li><a href="mailto:weijchen0919@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+					<li class="clock"></li>
 				</ul>
 				<ul class="copyright">
 					<li>&copy; JimmyC</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
@@ -473,5 +474,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				  });
 				});
 			</script>
+			<script src="assets/js/clock.js"></script>
 	</body>
 </html>
