--- a/index.html
+++ b/index.html
@@ -438,13 +438,13 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			</div>
 
 		<!-- Footer -->
-			<footer id="footer">
+			<footer id="footer" onload="updateClock(); setInterval('updateClock()', 1000 )">
 				<ul class="icons">
 					<li><a href="https://twitter.com/weijchen0919" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 					<li><a href="https://github.com/weijchen" class="icon fa-github"><span class="label">Github</span></a></li>
 					<li><a href="https://www.facebook.com/weijchen2013" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 					<li><a href="mailto:weijchen0919@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-					<li class="clock"></li>
+					<span id="clock"></span>
 				</ul>
 				<ul class="copyright">
 					<li>&copy; JimmyC</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
