--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
-	<body id="top">
+	<body id="top" >
 
 		<!-- Header -->
 			<header id="header">
@@ -438,13 +438,15 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			</div>
 
 		<!-- Footer -->
-			<footer id="footer" onload="updateClock(); setInterval('updateClock()', 1000 )">
+			<footer id="footer" >
 				<ul class="icons">
 					<li><a href="https://twitter.com/weijchen0919" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 					<li><a href="https://github.com/weijchen" class="icon fa-github"><span class="label">Github</span></a></li>
 					<li><a href="https://www.facebook.com/weijchen2013" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 					<li><a href="mailto:weijchen0919@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-					<span id="clock"></span>
+				</ul>
+				<ul>
+					<span id="clock"></span>					
 				</ul>
 				<ul class="copyright">
 					<li>&copy; JimmyC</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
