--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
 							<article class="6u 12u$(xsmall) work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
 								<h3>Homepage (2015/12/2)</h3>
-								<p><a href ='#'>Click here to see more.</a></p>
+								<p><a href ='http://weijchen.github.io/blog/'>Click here to see more.</a></p>
 							</article>
 							<article class="6u$ 12u$(xsmall) work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
 								<h3>Working on!</h3>
-								<p>can't wait to see</p>
+								<p><a href ="http://188.166.222.203:3001/">Click here to see more.</p>
 							</article>
 							<article class="6u 12u$(xsmall) work-item">
 								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
