--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 							</article>
 							<article class="6u$ 12u$(xsmall) work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Working on!</h3>
-								<p><a href ="http://188.166.222.203:3001/">Click here to see more.</p>
+								<h3>chooseMe</h3>
+								<p><a href ="http://188.166.222.203:3001/">Click here to see more.</a></p>
 							</article>
 							<article class="6u 12u$(xsmall) work-item">
 								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
