--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="6u 12u$(xsmall) work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
+								<a href="images/fulls/homepage.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
 								<h3>Homepage (2015/12/2)</h3>
 								<p><a href ='http://weijchen.github.io/blog/'>Click here to see more.</a></p>
 							</article>
 							<article class="6u$ 12u$(xsmall) work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
+								<a href="images/fulls/chooseMe.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
 								<h3>chooseMe</h3>
 								<p><a href ="http://188.166.222.203:3001/">Click here to see more.</a></p>
 							</article>
