--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 							</article>
 							<article class="6u$ 12u$(xsmall) work-item">
 								<a href="images/fulls/chooseMe.jpg" class="image fit thumb"><img src="images/fulls/chooseMe.jpg" alt="" /></a>
-								<h3>chooseMe</h3>
+								<h3>chooseMe (2015/12/13)</h3>
 								<p><a href ="http://188.166.222.203:3001/">Click here to see more.</a></p>
 							</article>
 							<article class="6u 12u$(xsmall) work-item">
