--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
 							<article class="6u$ 12u$(xsmall) work-item">
 								<a href="images/fulls/chooseMe.jpg" class="image fit thumb"><img src="images/fulls/chooseMe.jpg" alt="" /></a>
 								<h3>chooseMe (2015/12/13)</h3>
-								<p><a href ="http://188.166.222.203:3001/">Click here to see more.</a></p>
+								<p><a href ="http://weijchen.me:3001/">Click here to see more.</a></p>
 							</article>
 							<article class="6u 12u$(xsmall) work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Working on!</h3>
-								<p>can't wait to see</p>
+								<a href="images/fulls/account.jpg" class="image fit thumb"><img src="images/fulls/account.jpg" alt="" /></a>
+								<h3>Account (2015/12/15)</h3>
+								<p><a href ="http://weijchen.me:3002/">Click here to see more.</a></p>
 							</article>
 							<article class="6u$ 12u$(xsmall) work-item">
 								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
