change file type

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 								<p><a href ="http://weijchen.me:3000/">Click here to see more.</a></p>
 							</article>
 							<article class="6u$ 12u$(xsmall) work-item">
-								<a href="images/fulls/randomNumber" class="image fit thumb"><img src="images/fulls/randomNumber" alt="" /></a>
+								<a href="images/fulls/randomNumber.jpg" class="image fit thumb"><img src="images/fulls/randomNumber.jpg" alt="" /></a>
 								<h3>randomColor (2015/12/17)</h3>
 								<p><a href ="http://weijchen.me:3002/">Click here to see more.</a></p>
 							</article>
