160229 change url name

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 							<article class="6u 12u$(xsmall) work-item">
 								<a href="images/fulls/homepage.jpg" class="image fit thumb"><img src="images/fulls/homepage.jpg" alt="" /></a>
 								<h3>Homepage (2015/12/2)</h3>
-								<p><a href ='http://weijchen.github.io/blog/'>Click here to see more.</a></p>
+								<p><a href ='http://weijchen.github.io/Homepage/'>Click here to see more.</a></p>
 							</article>
 							<article class="6u$ 12u$(xsmall) work-item">
 								<a href="images/fulls/chooseMe.jpg" class="image fit thumb"><img src="images/fulls/chooseMe.jpg" alt="" /></a>
